--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atomap/use-places-autocomplete": "^1.0.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
@@ -16,6 +17,7 @@
     "clsx": "^1.1.1",
     "gsap": "^3.10.2",
     "leaflet": "^1.7.1",
+    "lottie-web": "^5.9.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
