--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
     "gsap": "^3.10.2",
+    "i18next": "^21.7.1",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "lottie-web": "^5.9.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.8",
     "react-leaflet": "^3.2.5",
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^6.3.0",
