feat(inputSsearch): custome home page

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
