--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "halal-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bekri78.github.io/halal-project",
   "dependencies": {
     "@atomap/use-places-autocomplete": "^1.0.4",
     "@emotion/react": "^11.9.0",
@@ -13,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
     "gsap": "^3.10.2",
@@ -39,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -58,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
