--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "firebase": "^9.8.4",
     "gsap": "^3.10.2",
     "i18next": "^21.7.1",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -24,6 +25,7 @@
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.9.2",
+    "notistack": "^2.0.5",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
