--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.6.0",
-    "@mui/material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.112",
+    "@mui/material": "^5.11.0",
     "@mui/styled-engine-sc": "^5.5.2",
     "@mui/styles": "^5.6.0",
     "@testing-library/jest-dom": "^5.16.4",
